crates/scribe-core/tests/snapshots/fixtures__json-blank.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
{
  "version": 1,
  "image": {
    "width": 220,
    "height": 140
  },
  "lines": []
}
