crates/scribe-core/tests/snapshots/fixtures__json-hello.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
{
  "version": 1,
  "image": {
    "width": 284,
    "height": 96
  },
  "lines": [
    {
      "text": "Hello World",
      "bbox": {
        "x": 26.0,
        "y": 28.0,
        "width": 231.0,
        "height": 35.0
      },
      "rotated_box": {
        "cx": 141.5,
        "cy": 45.5,
        "width": 231.0,
        "height": 35.0,
        "angle_deg": -0.0
      },
      "words": [
        {
          "text": "Hello",
          "bbox": {
            "x": 26.0,
            "y": 29.0,
            "width": 105.0,
            "height": 33.0
          },
          "rotated_box": {
            "cx": 78.5,
            "cy": 45.5,
            "width": 105.0,
            "height": 33.0,
            "angle_deg": -0.0
          },
          "chars": [
            {
              "text": "H",
              "bbox": {
                "x": 26.0,
                "y": 29.0,
                "width": 32.0,
                "height": 33.0
              },
              "confidence": null
            },
            {
              "text": "e",
              "bbox": {
                "x": 58.0,
                "y": 29.0,
                "width": 27.0,
                "height": 33.0
              },
              "confidence": null
            },
            {
              "text": "l",
              "bbox": {
                "x": 85.0,
                "y": 29.0,
                "width": 11.0,
                "height": 33.0
              },
              "confidence": null
            },
            {
              "text": "l",
              "bbox": {
                "x": 96.0,
                "y": 29.0,
                "width": 11.0,
                "height": 33.0
              },
              "confidence": null
            },
            {
              "text": "o",
              "bbox": {
                "x": 107.0,
                "y": 29.0,
                "width": 24.0,
                "height": 33.0
              },
              "confidence": null
            }
          ],
          "confidence": null
        },
        {
          "text": "World",
          "bbox": {
            "x": 146.0,
            "y": 28.0,
            "width": 111.0,
            "height": 35.0
          },
          "rotated_box": {
            "cx": 201.5,
            "cy": 45.5,
            "width": 111.0,
            "height": 35.0,
            "angle_deg": -0.0
          },
          "chars": [
            {
              "text": "W",
              "bbox": {
                "x": 146.0,
                "y": 28.0,
                "width": 39.0,
                "height": 35.0
              },
              "confidence": null
            },
            {
              "text": "o",
              "bbox": {
                "x": 185.0,
                "y": 28.0,
                "width": 24.0,
                "height": 35.0
              },
              "confidence": null
            },
            {
              "text": "r",
              "bbox": {
                "x": 209.0,
                "y": 28.0,
                "width": 18.0,
                "height": 35.0
              },
              "confidence": null
            },
            {
              "text": "l",
              "bbox": {
                "x": 227.0,
                "y": 28.0,
                "width": 22.0,
                "height": 35.0
              },
              "confidence": null
            },
            {
              "text": "d",
              "bbox": {
                "x": 249.0,
                "y": 28.0,
                "width": 8.0,
                "height": 35.0
              },
              "confidence": null
            }
          ],
          "confidence": null
        }
      ],
      "confidence": null
    }
  ]
}
