crates/scribe-core/tests/snapshots/fixtures__svg-baseline-estimate-paragraph.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" id="scribe-xn3jur" class="scribe-xn3jur-root" width="480" height="280" viewBox="0 0 480 280">
  <style>
    #scribe-xn3jur { color-scheme: light dark; }
    #scribe-xn3jur .scribe-xn3jur-text { all: revert; fill: transparent; stroke: none; font-family: sans-serif; font-style: normal; font-weight: normal; font-variant: normal; font-stretch: normal; letter-spacing: normal; word-spacing: normal; text-anchor: start; text-decoration: none; text-transform: none; direction: ltr; user-select: text; -webkit-user-select: text; white-space: pre; }
    #scribe-xn3jur .scribe-xn3jur-text text, #scribe-xn3jur .scribe-xn3jur-text tspan { fill: inherit; stroke: inherit; font-family: inherit; font-style: inherit; font-weight: inherit; font-variant: inherit; font-stretch: inherit; letter-spacing: inherit; word-spacing: inherit; text-anchor: inherit; text-decoration: inherit; text-transform: inherit; direction: inherit; unicode-bidi: isolate; white-space: inherit; user-select: inherit; -webkit-user-select: inherit; }
    #scribe-xn3jur .scribe-xn3jur-text::selection, #scribe-xn3jur .scribe-xn3jur-text ::selection { fill: HighlightText; background: color-mix(in srgb, Highlight 35%, transparent); }
  </style>
  <image href="paragraph.png" width="480" height="280"/>
  <g class="scribe-xn3jur-text">
    <text class="scribe-xn3jur-line"><tspan class="scribe-xn3jur-word" x="33" y="57" font-size="35" textLength="118" lengthAdjust="spacingAndGlyphs">Reading</tspan> <tspan class="scribe-xn3jur-word" x="162" y="51" font-size="25" textLength="134" lengthAdjust="spacingAndGlyphs">Machines</tspan></text>
    <text class="scribe-xn3jur-line"><tspan class="scribe-xn3jur-word" x="31" y="107.6" font-size="17" textLength="37" lengthAdjust="spacingAndGlyphs">The</tspan> <tspan class="scribe-xn3jur-word" x="74.63" y="110.58" font-size="21.4" textLength="50.73" lengthAdjust="spacingAndGlyphs">quick</tspan> <tspan class="scribe-xn3jur-word" x="131" y="106.6" font-size="17" textLength="58" lengthAdjust="spacingAndGlyphs">brown</tspan> <tspan class="scribe-xn3jur-word" x="196" y="107.4" font-size="18" textLength="27" lengthAdjust="spacingAndGlyphs">fox</tspan> <tspan class="scribe-xn3jur-word" x="229" y="109.8" font-size="21" textLength="57" lengthAdjust="spacingAndGlyphs">jumps</tspan></text>
    <text class="scribe-xn3jur-line"><tspan class="scribe-xn3jur-word" x="32" y="144.2" font-size="14" textLength="43" lengthAdjust="spacingAndGlyphs">over</tspan> <tspan class="scribe-xn3jur-word" x="81" y="143.4" font-size="18" textLength="31" lengthAdjust="spacingAndGlyphs">the</tspan> <tspan class="scribe-xn3jur-word" x="118" y="145" font-size="20" textLength="38" lengthAdjust="spacingAndGlyphs">lazy</tspan> <tspan class="scribe-xn3jur-word" x="167" y="145.2" font-size="19" textLength="35" lengthAdjust="spacingAndGlyphs">dog,</tspan> <tspan class="scribe-xn3jur-word" x="210" y="143.4" font-size="18" textLength="34" lengthAdjust="spacingAndGlyphs">and</tspan> <tspan class="scribe-xn3jur-word" x="257" y="143.6" font-size="17" textLength="38" lengthAdjust="spacingAndGlyphs">does</tspan></text>
    <text class="scribe-xn3jur-line"><tspan class="scribe-xn3jur-word" x="31" y="180.2" font-size="19" textLength="14" lengthAdjust="spacingAndGlyphs">it</tspan> <tspan class="scribe-xn3jur-word" x="51.67" y="183.08" font-size="23.3" textLength="52.66" lengthAdjust="spacingAndGlyphs">again</tspan> <tspan class="scribe-xn3jur-word" x="110" y="179.8" font-size="16" textLength="22" lengthAdjust="spacingAndGlyphs">on</tspan> <tspan class="scribe-xn3jur-word" x="139.26" y="178.8" font-size="17.94" textLength="31.47" lengthAdjust="spacingAndGlyphs">the</tspan> <tspan class="scribe-xn3jur-word" x="176" y="180" font-size="15" textLength="42" lengthAdjust="spacingAndGlyphs">next</tspan> <tspan class="scribe-xn3jur-word" x="225" y="179.6" font-size="17" textLength="38" lengthAdjust="spacingAndGlyphs">line.</tspan></text>
    <text class="scribe-xn3jur-line" transform="rotate(0.53 111.5 236.5)"><tspan class="scribe-xn3jur-word" x="30.99" y="239.14" font-size="12" textLength="44" lengthAdjust="spacingAndGlyphs">Printed</tspan> <tspan class="scribe-xn3jur-word" x="77.98" y="238.65" font-size="13" textLength="12" lengthAdjust="spacingAndGlyphs">in</tspan> <tspan class="scribe-xn3jur-word" x="94.99" y="238.62" font-size="12" textLength="29" lengthAdjust="spacingAndGlyphs">1996</tspan> <tspan class="scribe-xn3jur-word" x="127.99" y="238.59" font-size="11" textLength="12" lengthAdjust="spacingAndGlyphs">at</tspan> <tspan class="scribe-xn3jur-word" x="144" y="241.28" font-size="16" textLength="48" lengthAdjust="spacingAndGlyphs">Leyden.</tspan></text>
  </g>
</svg>
