crates/scribe-core/tests/snapshots/fixtures__svg-blank.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="220" height="140" viewBox="0 0 220 140" role="img">
  <style>
    .scribe-text { user-select: text; -webkit-user-select: text; white-space: pre; }
    .scribe-text::selection, .scribe-text ::selection { fill: #000; background: rgba(0, 90, 255, 0.35); }
  </style>
  <image href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAANwAAACMCAAAAAAyv5iqAAACj0lEQVR4Ae3AA6AkWZbG8f937o3IzKdyS2Oubdu2bdu2bdu2bWmMnpZKr54yMyLu+Xa3anqmhztr1a+a/5MACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYA/hFo6QIaftzMegAAAABJRU5ErkJggg==" width="220" height="140"/>
  <g class="scribe-text" font-family="sans-serif" fill="transparent"/>
</svg>
