crates/scribe-core/tests/snapshots/fixtures__svg-char-positions-paragraph.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="scribe-gsfqf9" class="scribe-gsfqf9-root" width="480" height="280" viewBox="0 0 480 280">
  <style>
    #scribe-gsfqf9 { color-scheme: light dark; }
    #scribe-gsfqf9 .scribe-gsfqf9-text { all: revert; fill: transparent; stroke: none; font-family: sans-serif; font-style: normal; font-weight: normal; font-variant: normal; font-stretch: normal; letter-spacing: normal; word-spacing: normal; text-anchor: start; text-decoration: none; text-transform: none; direction: ltr; user-select: text; -webkit-user-select: text; white-space: pre; }
    #scribe-gsfqf9 .scribe-gsfqf9-text text, #scribe-gsfqf9 .scribe-gsfqf9-text tspan { fill: inherit; stroke: inherit; font-family: inherit; font-style: inherit; font-weight: inherit; font-variant: inherit; font-stretch: inherit; letter-spacing: inherit; word-spacing: inherit; text-anchor: inherit; text-decoration: inherit; text-transform: inherit; direction: inherit; unicode-bidi: isolate; white-space: inherit; user-select: inherit; -webkit-user-select: inherit; }
    #scribe-gsfqf9 .scribe-gsfqf9-text::selection, #scribe-gsfqf9 .scribe-gsfqf9-text ::selection { fill: HighlightText; background: color-mix(in srgb, Highlight 35%, transparent); }
  </style>
  <image href="paragraph.png" width="480" height="280"/>
  <g class="scribe-gsfqf9-text">
    <text class="scribe-gsfqf9-line"><tspan class="scribe-gsfqf9-word" x="33 54 72 98 107 116 136" y="57" font-size="35">Reading</tspan> <tspan class="scribe-gsfqf9-word" x="162 188 206 221 239 247 267 285" y="51" font-size="25">Machines</tspan></text>
    <text class="scribe-gsfqf9-line"><tspan class="scribe-gsfqf9-word" x="31 45 58" y="107.6" font-size="17">The</tspan> <tspan class="scribe-gsfqf9-word" x="75 87 98 104 114" y="110.58" font-size="21.4">quick</tspan> <tspan class="scribe-gsfqf9-word" x="131 143 151 163 177" y="106.6" font-size="17">brown</tspan> <tspan class="scribe-gsfqf9-word" x="196 203 213" y="107.4" font-size="18">fox</tspan> <tspan class="scribe-gsfqf9-word" x="229 236 248 266 278" y="109.8" font-size="21">jumps</tspan></text>
    <text class="scribe-gsfqf9-line"><tspan class="scribe-gsfqf9-word" x="32 46 56 68" y="144.2" font-size="14">over</tspan> <tspan class="scribe-gsfqf9-word" x="81 89 101" y="143.4" font-size="18">the</tspan> <tspan class="scribe-gsfqf9-word" x="118 125 137 146" y="145" font-size="20">lazy</tspan> <tspan class="scribe-gsfqf9-word" x="167 175 186 198" y="145.2" font-size="19">dog,</tspan> <tspan class="scribe-gsfqf9-word" x="210 222 239" y="143.4" font-size="18">and</tspan> <tspan class="scribe-gsfqf9-word" x="257 264 276 288" y="143.6" font-size="17">does</tspan></text>
    <text class="scribe-gsfqf9-line"><tspan class="scribe-gsfqf9-word" x="31 38" y="180.2" font-size="19">it</tspan> <tspan class="scribe-gsfqf9-word" x="52 63 76 87 93" y="183.08" font-size="23.3">again</tspan> <tspan class="scribe-gsfqf9-word" x="110 123" y="179.8" font-size="16">on</tspan> <tspan class="scribe-gsfqf9-word" x="140 148 160" y="178.8" font-size="17.94">the</tspan> <tspan class="scribe-gsfqf9-word" x="176 190 201 212" y="180" font-size="15">next</tspan> <tspan class="scribe-gsfqf9-word" x="225 229 236 248 259" y="179.6" font-size="17">line.</tspan></text>
    <text class="scribe-gsfqf9-line" transform="rotate(0.53 111.5 236.5)"><tspan class="scribe-gsfqf9-word" x="30.93 39.93 43.93 47.93 55.93 59.93 70.93" y="239.14" font-size="12">Printed</tspan> <tspan class="scribe-gsfqf9-word" x="77.92 82.93" y="238.65" font-size="13">in</tspan> <tspan class="scribe-gsfqf9-word" x="94.93 101.93 109.93 116.93" y="238.62" font-size="12">1996</tspan> <tspan class="scribe-gsfqf9-word" x="127.94 135.94" y="238.59" font-size="11">at</tspan> <tspan class="scribe-gsfqf9-word" x="143.93 150.93 157.93 168.93 172.93 179.93 187.93" y="241.28" font-size="16">Leyden.</tspan></text>
  </g>
</svg>
