crates/scribe-core/tests/snapshots/fixtures__svg-char-positions-rotated.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="scribe-u9mh84" class="scribe-u9mh84-root" width="420" height="320" viewBox="0 0 420 320">
  <style>
    #scribe-u9mh84 { color-scheme: light dark; }
    #scribe-u9mh84 .scribe-u9mh84-text { all: revert; fill: transparent; stroke: none; font-family: sans-serif; font-style: normal; font-weight: normal; font-variant: normal; font-stretch: normal; letter-spacing: normal; word-spacing: normal; text-anchor: start; text-decoration: none; text-transform: none; direction: ltr; user-select: text; -webkit-user-select: text; white-space: pre; }
    #scribe-u9mh84 .scribe-u9mh84-text text, #scribe-u9mh84 .scribe-u9mh84-text tspan { fill: inherit; stroke: inherit; font-family: inherit; font-style: inherit; font-weight: inherit; font-variant: inherit; font-stretch: inherit; letter-spacing: inherit; word-spacing: inherit; text-anchor: inherit; text-decoration: inherit; text-transform: inherit; direction: inherit; unicode-bidi: isolate; white-space: inherit; user-select: inherit; -webkit-user-select: inherit; }
    #scribe-u9mh84 .scribe-u9mh84-text::selection, #scribe-u9mh84 .scribe-u9mh84-text ::selection { fill: HighlightText; background: color-mix(in srgb, Highlight 35%, transparent); }
  </style>
  <image href="rotated.png" width="420" height="320"/>
  <g class="scribe-u9mh84-text">
    <text class="scribe-u9mh84-line" transform="rotate(13.84 109.14 96.94)"><tspan class="scribe-u9mh84-word" x="32.66 54.98 66.38 74.63 86.02 108.82" y="108.67" font-size="38">Tilted</tspan> <tspan class="scribe-u9mh84-word" x="128.94 135.98 147.87 165.83" y="106.32" font-size="32.28">line</tspan></text>
    <text class="scribe-u9mh84-line"><tspan class="scribe-u9mh84-word" x="368" y="170.8" font-size="26">S</tspan></text>
    <text class="scribe-u9mh84-line"><tspan class="scribe-u9mh84-word" x="368" y="190" font-size="20">2</tspan></text>
    <text class="scribe-u9mh84-line"><tspan class="scribe-u9mh84-word" x="362" y="267.8" font-size="91">i</tspan></text>
  </g>
</svg>
